# eigenangi

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/eigenangi/: __init__.py  config.py  exceptions.py  utils.py
src/eigenangi/ec2/: __init__.py  ec2.py
tests/: test_ec2.py
